// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modules/datasource/clojure/index collects releases from all registry urls 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/0.0.1/package-0.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/package-1.0.3-20200101.010003-3.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/package-1.0.4-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/package-1.0.5-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/3.0.0/package-3.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/3.0.0/package-3.0.0.pom",
  },
]
`;

exports[`modules/datasource/clojure/index falls back to next registry url 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://clojars.org/repo",
  "releases": Array [
    Object {
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T01:00:03.000Z",
      "version": "1.0.3-SNAPSHOT",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`modules/datasource/clojure/index falls back to next registry url 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "failed_repo",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://failed_repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "unauthorized_repo",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://unauthorized_repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "empty_repo",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://empty_repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "unknown_error",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://unknown_error/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/0.0.1/package-0.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/package-1.0.3-20200101.010003-3.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/package-1.0.4-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/package-1.0.5-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`modules/datasource/clojure/index handles optional slash at the end of registry url 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/0.0.1/package-0.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/package-1.0.3-20200101.010003-3.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/package-1.0.4-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/package-1.0.5-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/0.0.1/package-0.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/package-1.0.3-20200101.010003-3.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/package-1.0.4-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/package-1.0.5-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`modules/datasource/clojure/index ignores unsupported protocols 1`] = `
Array [
  Object {
    "version": "0.0.1",
  },
  Object {
    "releaseTimestamp": "2020-01-01T01:00:00.000Z",
    "version": "1.0.0",
  },
  Object {
    "releaseTimestamp": "2020-01-01T01:00:03.000Z",
    "version": "1.0.3-SNAPSHOT",
  },
  Object {
    "releaseTimestamp": "2020-01-01T02:00:00.000Z",
    "version": "2.0.0",
  },
]
`;

exports[`modules/datasource/clojure/index ignores unsupported protocols 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "http://clojars.org/repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "http://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "http://clojars.org/repo/org/example/package/0.0.1/package-0.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "http://clojars.org/repo/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "http://clojars.org/repo/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "http://clojars.org/repo/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "http://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/package-1.0.3-20200101.010003-3.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "http://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "http://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "http://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "http://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/package-1.0.4-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "http://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/package-1.0.5-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "http://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`modules/datasource/clojure/index returns releases from custom repository 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://custom.registry.renovatebot.com",
  "releases": Array [
    Object {
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T01:00:03.000Z",
      "version": "1.0.3-SNAPSHOT",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`modules/datasource/clojure/index returns releases from custom repository 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.3-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/0.0.1/package-0.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.3-SNAPSHOT/package-1.0.3-20200101.010003-3.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.4-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.5-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.4-SNAPSHOT/package-1.0.4-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://custom.registry.renovatebot.com/org/example/package/1.0.5-SNAPSHOT/package-1.0.5-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer 123test",
      "host": "custom.registry.renovatebot.com",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://custom.registry.renovatebot.com/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`modules/datasource/clojure/index skips registry with invalid XML 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://clojars.org/repo",
  "releases": Array [
    Object {
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T01:00:03.000Z",
      "version": "1.0.3-SNAPSHOT",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`modules/datasource/clojure/index skips registry with invalid XML 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "invalid_metadata_repo",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://invalid_metadata_repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/0.0.1/package-0.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/package-1.0.3-20200101.010003-3.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/package-1.0.4-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/package-1.0.5-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;

exports[`modules/datasource/clojure/index skips registry with invalid metadata structure 1`] = `
Object {
  "display": "org.example:package",
  "group": "org.example",
  "homepage": "https://package.example.org/about",
  "name": "package",
  "registryUrl": "https://clojars.org/repo",
  "releases": Array [
    Object {
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2020-01-01T01:00:00.000Z",
      "version": "1.0.0",
    },
    Object {
      "releaseTimestamp": "2020-01-01T01:00:03.000Z",
      "version": "1.0.3-SNAPSHOT",
    },
    Object {
      "releaseTimestamp": "2020-01-01T02:00:00.000Z",
      "version": "2.0.0",
    },
  ],
}
`;

exports[`modules/datasource/clojure/index skips registry with invalid metadata structure 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "invalid_metadata_repo",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://invalid_metadata_repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/0.0.1/package-0.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.0/package-1.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.1/package-1.0.1.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.2/package-1.0.2.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.3-SNAPSHOT/package-1.0.3-20200101.010003-3.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/maven-metadata.xml",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.4-SNAPSHOT/package-1.0.4-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "HEAD",
    "url": "https://clojars.org/repo/org/example/package/1.0.5-SNAPSHOT/package-1.0.5-SNAPSHOT.pom",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "clojars.org",
      "user-agent": "RenovateBot/0.0.0-semantic-release (https://github.com/renovatebot/renovate)",
    },
    "method": "GET",
    "url": "https://clojars.org/repo/org/example/package/2.0.0/package-2.0.0.pom",
  },
]
`;
